[package]
name = "win-remote-touch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_Input_Touch",
    "Win32_UI_Input_Pointer",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
